fix: scrollbar and selection color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,20 +15,23 @@ html {
   width: 6px;
   height: 6px;
 }
+
 ::-webkit-scrollbar-track {
   background-color: rgba(238, 238, 238, 0.2);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
 }
+
 ::-webkit-scrollbar-thumb {
   border-radius: 6px;
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
-  @apply bg-theme-300;
+  @apply bg-BrandStroke2 hover:bg-BrandStroke2Hover hover:active:bg-BrandStroke2Pressed;
 }
 
 .dark ::-webkit-scrollbar-thumb {
   background-image: -webkit-linear-gradient(45deg, rgba(0, 0, 0, 0.2) 25%, transparent 25%, transparent 50%, rgba(0, 0, 0, 0.2) 50%, rgba(0, 0, 0, 0.2) 75%, transparent 75%, transparent);
-  @apply bg-theme-700 bg-opacity-40;
+  @apply bg-BrandStroke2 hover:bg-BrandStroke2Hover hover:active:bg-BrandStroke2Pressed;
 }
 
-::selection { @apply text-shadow-none bg-theme-100 dark:bg-gray-700  }
+/* 选中 */
+::selection { @apply text-shadow-none bg-BrandBackground2Hover 1dark:bg-gray-700  }
